--- a/src/main/resources/static/quiz.css
+++ b/src/main/resources/static/quiz.css
@@ -13,6 +13,13 @@
 	margin-top: 30px;
 }
 
+.logo {
+	padding-left:150px;
+}
+.revque {
+	padding-left: 100px;
+}
+
 .nav-bar h5{
 	margin-top: 15px;
 }
@@ -126,5 +133,12 @@ button {
     }
     .review-section {
    	 margin-left: 10px;
+	}
+	.nav-bar .row .logo {
+	padding-left:5px;
+	}
+	.revque {
+	padding-left: 5px;
 }
+   
 }
